--- a/src/findmycareer/SearchPage.form
+++ b/src/findmycareer/SearchPage.form
@@ -26,6 +26,9 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="sansserif" size="24" style="0"/>
         </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="e6" green="e6" red="e6" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="FindMyCareer"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
